# komokana

./: .gitignore  .goreleaser.yml  Cargo.toml  LICENSE  LICENSE.md  README.md  justfile  komokana.example.yaml
.github/: FUNDING.yml
.github/workflows/: windows.yml
src/: configuration.rs  events.rs  kanata.rs  main.rs  osx.rs  windows.rs
wix/: License.rtf  main.wxs
