[package]
name = "komokana"
version = "0.1.6"
description = "A daemon that switches kanata keyboard layers in response to komorebi events"
categories = ["cli", "tiling-window-manager", "windows", "keyboard"]
repository = "https://github.com/LGUG2Z/komokana"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
dirs = "6"
env_logger = "0.11"
json_dotpath = "1"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
komorebi-client = { git = "https://github.com/LGUG2Z/komorebi" }

[dependencies.windows]
version = "0.62"
features = ["Win32_UI_Input_KeyboardAndMouse"]
